# flask-mailing

./: .gitignore  .pre-commit-config.yaml  .tabnine.model  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FUTURE-ROADMAP.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO.txt  index.html  mkdocs.yml  pyproject.toml  requirements.docs.txt  requirements.txt  setup.py  sitemap.xml  tox.ini
.github/: FUNDING.yml
.github/workflows/: ci.yml  main.yml  test-package.yml
changelog/: index.html
contribute/: index.html
docs/: changelog.md  contribute.md  example.md  future-roadmap.md  getting-started.md  index.md  install.md
example/: index.html
examples/: application.py  base.py  features.py  main.py  modern_flask3_example.py
examples/attachments/: test.html
examples/templates/: test.html
files/: email.html
flask_email/: __init__.py  config.py  connection.py  errors.py  mail.py  msg.py  schemas.py
flask_email/email_utils/: email_check.py
flask_email/utils/: email_check.py
flask_mailing/: __init__.py  config.py  connection.py  errors.py  mail.py  msg.py  schemas.py  security.py
flask_mailing/utils/: __init__.py  email_check.py  errors.py
getting-started/: index.html
install/: index.html
search/: search_index.json
tests/: conftest.py  requirements.testing.txt  test_checker.py  test_connection.py  test_flask_email.py  test_flask_mailing.py  test_message.py  test_redis_config.py
