[build-system]
requires = [
    "setuptools>=75.6",
    "wheel>=0.45",
    "setuptools-scm>=8.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "Flask-Mailing"
version = "3.0.0"
description = "Modern Flask mail system for 2026+ with async support, bulk operations, and full Flask 3.1+ compatibility"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Aniket Sarkar", email = "aniketsarkar@yahoo.com"}
]
maintainers = [
    {name = "Aniket Sarkar", email = "aniketsarkar@yahoo.com"}
]
keywords = [
    "flask",
    "flask-mail",
    "flask-mailing",
    "async-flask",
    "asynchronous-email",
    "async-mailer",
    "flask-email",
    "smtp",
    "email"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment", 
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Email",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "aiosmtplib>=4.0.2",
    "asgiref>=3.9.0",
    "blinker>=1.9.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "email-validator>=2.3.0",
    "typing-extensions>=4.13.0",
    "flask>=3.1.0",
    "jinja2>=3.1.6",
    "werkzeug>=3.1.3"
]

[project.optional-dependencies]
email-checking = [
    "redis>=5.3.0",
    "httpx>=0.28.1", 
    "dnspython>=2.8.0"
]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "black>=25.1.0",
    "isort>=6.0.0",
    "mypy>=1.16.0",
    "ruff>=0.11.0",
    "coverage>=7.8.0",
    "pre-commit>=4.2.0"
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.0",
    "mkdocstrings>=0.29.0",
    "mkdocstrings-python>=1.16.0"
]
all = [
    "flask-mailing[email-checking,dev,docs]"
]

[project.urls]
Homepage = "https://github.com/marktennyson/flask-mailing"
Documentation = "https://marktennyson.github.io/flask-mailing"
Repository = "https://github.com/marktennyson/flask-mailing"
Changelog = "https://github.com/marktennyson/flask-mailing/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/marktennyson/flask-mailing/issues"

[tool.setuptools]
packages = ["flask_mailing", "flask_mailing.utils"]

[tool.setuptools.package-data]
flask_mailing = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | env
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["flask_mailing"]
skip = [".git", ".tox", ".venv", "env", "dist", "build"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["aiosmtplib.*", "dns.*", "redis.*", "httpx.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".git",
    ".tox",
    ".venv",
    "env",
    "dist",
    "build",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "PL",   # pylint
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "PLR2004"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["flask_mailing"]
branch = true
omit = ["tests/*", "env/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]